# inSay-O

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
app/: config.py
app/indexing/: chunking.py  vector_store.py
app/ingestion/: local.py
app/models/: metadata.py
app/retrieval/: bm25_index.py  fusion.py  rerank.py
scripts/: ingest.py  query.py  reindex.py  smoke_test.py
