[project]
name = "insay-o"
version = "0.1.0"
description = "A local‑first desktop application that combines development data (Jira, GitHub, local files) into a unified, queryable knowledge base. Leveraging a multi‑stage RAG pipeline with LlamaIndex, the tool delivers precise, context-aware answers to developer queries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.21",
    "llama-index>=0.14.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-vector-stores-chroma>=0.5.3",
    "onnxruntime>=1.22.1",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pywebview>=6.0",
    "rank-bm25>=0.2.2",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "transformers>=4.56.1",
    "typer>=0.17.4",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
